--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px white inset; }
 
 .header-wrapper {position:fixed;background:#fff; z-index:99; top:0; left:0; width:100%;}
 
+.language {margin-right:10px;}
+
 .login-status-wrapper {background:#7aa508; margin-bottom:1px; padding-top:5px; height:27px;}
 .login-status {color:#bbfb04; text-align:right;}
 .login-status a {color:#bbfb04;}
@@ -311,6 +313,7 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 .q-message p {position:relative; background: #e6e6e6; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -ms-border-radius:5px; padding:5px 10px; width:450px;}
 .q-message img {position:absolute; bottom:-9px; left:5px;}
 
+.about {padding-top:150px;}
 .about .fl h1 {font-family: 'quicksandregular';}
 .about .fl p {font-family: 'quicksandregular'; font-size:1.3em; line-height:20px; margin:10px 0;}
 .about .fr ul li {cursor:pointer;}
@@ -422,6 +425,8 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 
 .btn-book-now {text-align:right; margin-top:10px;}
 
+.privacy {padding-top:140px;}
+
 
 
 
@@ -529,6 +534,7 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 
 
 /***** [Contact Us] *****/
+.contact {padding-top:140px;}
 .contact ul {list-style:none;}
 .contact ul li {margin-bottom:10px;}
 .contact ul li label, .contact ul li input, .contact ul li textarea {float:left;}
