--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ footer .pull-right .fl span:last-child {color:#678222;}
 	Template Layout
  ================== */
 .success-message {background: #8aff73; border:1px solid #368714; padding:10px; width:100%;}
-.success-message p {background: url('<?php echo base_url('assets/images/page_template')?>/icon_check_success.png') no-repeat; color:#378b15; font-size:1.3em; padding: 15px 0 0 70px; height:50px;} 
+.success-message p {background: url('../images/page_template/icon_check_success.png') no-repeat; color:#378b15; font-size:1.3em; padding: 15px 0 0 70px; height:50px;} 
 .btn-search {
 	background: url('../images/page_template/icon_magnify.png') no-repeat;
 	background: url('../images/page_template/icon_magnify.png') no-repeat, -ms-linear-gradient(top left, #FFF254 0%, #FFCF04 100%); /* IE10 Consumer Preview */ 
@@ -359,7 +359,10 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 .register div label, .register div input {float:left; margin-right:5px;}
 .register form ul li label a:hover {text-decoration:none;}
 
-#successful-message {border:3px solid #27f82a; text-align:center; margin-top:30px; padding:10px 0;}
+#successful-message {padding:130px 0 0;}
+#successful-message p {background: #8aff73 url('../images/page_template/icon_check_success.png') no-repeat 2% 50%; color:#378b15; font-size:1.3em; text-align:center; border:3px solid #27f82a; padding:20px 0;}
+
+
 
 
 /***** [Lift View] *****/
@@ -493,6 +496,7 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 #passenger-calendar .pcal-body ul li {word-break:break-all; padding:10px; width:370px;}
 #passenger-calendar .pcal-body ul li:nth-child(odd) {background:#f5f5f5;}
 
+.passenger-detail-information {padding-top:130px;}
 .passenger-detail-information .fl h3 span {color:#678222;}
 .passenger-detail-information .fl h3 {line-height: .5em;}
 
