--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -710,6 +710,7 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 
 
 /***** [Member - Edit View] *****/
+.member-profile {padding-top:120px;}
 .profile-edit {margin-left:10px;}
 .profile-edit input[name="update_submit"] {background:#47a447; color:#fff; text-transform:uppercase; font-size:14px; font-weight:bold; border:none; padding:5px 20px;}
 .profile-edit ul li {margin-bottom:20px;}
