- Add auto suggest javascript so that the search function would work correctly, - Fixed layout of Inbox and Sent Items page, - Fixed layout of settings page, - I uncompressed the editor.js to avoid errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,6 +747,11 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 
 
 
+/***** [Member - Messages] *****/
+
+
+
+
 /***** [Member - Billing Information] *****/
 .member-billing {margin-top:140px;}
 .member-billing section {margin-left:10px;}
