--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -751,6 +751,25 @@ section {position:relative; border:1px solid transparent; border-left:none; bord
 .overview-detail {margin-left:10px; width:80%;}
 .overview-detail ul li {margin-bottom:10px;}
 .overview-detail ul li label {font-weight:bold; width:100px;}
+.overview-detail ul li input[type="submit"] {background:#47a447; color:#fff; text-transform:uppercase; font-size:14px; font-weight:bold; border:none; margin-top:40px; padding:5px 20px;}
+
+
+
+
+/***** [Member - Car Edit] *****/
+.profile-car {margin-left:10px;}
+.p-frame-car {border:1px solid #adadad; padding:5px 10px;}
+
+.p-car-heading {background: #75ca30; color:#fff; font-size: 1.3em; padding:10px; height:40px;}
+
+.p-car-info ul li {}
+.p-car-info ul li label, .p-car-info ul li span {float:left; display:block; padding:10px;}
+.p-car-info ul li label {border-right:1px solid #d2d2d2; width:200px;}
+.p-car-info ul li:nth-child(even) {background: #eaeaea;}
+
+.profile-car input[type="submit"] {background:#47a447; color:#fff; text-transform:uppercase; font-size:14px; font-weight:bold; border:none; padding:5px 20px;}
+.p-frame-car button {border:none; padding:10px 0; width:100%;}
+.p-frame-car input {display:none;}
 
 
 
