--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -627,26 +627,19 @@ section {position:relative; /*border:1px solid transparent;*/ border-left:none; 
 
 .event-search-location {border:1px solid #ccc; border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; padding:10px;}
 
-.offer-and-wish-lift {background:url('../images/page_template/offer_and_wish_lift.jpg') no-repeat; color:#2e2e2e; font-family: 'quicksandregular'; font-weight:bold; font-size:1.2em; margin-top:110px; padding-bottom:130px;}
-.offer-and-wish-lift .fl {padding:40px 20px 20px;}
-.offer-and-wish-lift .fl p {line-height:35px;}
-.offer-and-wish-lift .fr {margin-top:20px;}
-.offer-and-wish-lift .fr ul li {cursor:pointer;}
-.offer-and-wish-lift .fr ul li a {color:#000;}
-.offer-and-wish-lift .fr ul li p, .offer-and-wish-lift .fr ul li div {float:left;}
 
-.offer-and-wish-lift .fr ul {margin-left:170px; padding-top:100px;}
-.offer-and-wish-lift .fr ul li {margin-bottom:10px;}
-.offer-and-wish-lift .fr ul li a {display:block; width:259px; height:64px;}
 
-.offer-and-wish-lift .fr ul li:first-child {background:url('../images/page_template/btn_create_rides.png') no-repeat 0 0; width:259px; height:64px;}
-.offer-and-wish-lift .fr ul li:first-child:hover {background:url('../images/page_template/btn_create_rides.png') no-repeat 0 -64px; width:259px; height:64px;}
 
-.offer-and-wish-lift .fr ul li:nth-child(2) {background:url('../images/page_template/btn_create_wish_ride.png') no-repeat 0 0; width:259px; height:64px;}
-.offer-and-wish-lift .fr ul li:nth-child(2):hover {background:url('../images/page_template/btn_create_wish_ride.png') no-repeat 0 -64px; width:259px; height:64px;}
+/***** [Offer Wish Lift] *****/
+.offer-and-wish-bg {position:absolute; background: url('../images/offer-wish-lift-bg.png') repeat-x; text-align:center; top:300px; left:0; width:100%; height:92px; z-index:0;}
 
-.offer-and-wish-lift .fr ul li:nth-child(3) {background:url('../images/page_template/btn_create_event.png') no-repeat 0 0; width:259px; height:64px;}
-.offer-and-wish-lift .fr ul li:nth-child(3):hover {background:url('../images/page_template/btn_create_event.png') no-repeat 0 -64px; width:259px; height:64px;}
+.offer-and-wish-lift {position:relative; color:#2e2e2e; font-family: 'Open Sans', sans-serif; font-size:1.2em; text-align:justify; margin-top:130px; z-index:1;}
+.offer-and-wish-lift ul {margin-top:205px;}
+.offer-and-wish-lift ul li {display:inline-block; margin-right:56px;}
+.offer-and-wish-lift ul li:last-child {margin-right:0;}
+.offer-and-wish-lift ul li a img {width:284px; height:284px;}
+.offer-and-wish-lift p {color:#57613c; padding:30px 66px 0;}
+
 
 .create-lift ul {list-style:none; margin-bottom:30px;}
 .create-lift form ul li {margin-bottom:10px;}
